--- a/index.html
+++ b/index.html
@@ -2176,7 +2176,7 @@
         position: relative;
         width: 85px;
         height: 100px;
-        background-image: url(grootLogo.png);
+        background-image: url(grootLogo2.png);
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
@@ -8439,7 +8439,7 @@
                       transform: translate(-50%, 0%);
                     ">
                     <div _ngcontent-oob-c93="" class="ttImg" style="width: auto !important">
-                      <img _ngcontent-oob-c93="" alt="" src="grootLogo.png" />
+                      <img _ngcontent-oob-c93="" alt="" src="grootLogo2.png" />
                     </div>
                   </div>
                   <div _ngcontent-oob-c93="" class="buttons">
@@ -8521,7 +8521,7 @@
                                 visibility: inherit;
                               ">
                               <div _ngcontent-oob-c81="" class="label"> BUY NOW </div>
-                              <img _ngcontent-oob-c81="" alt="" class="slideImg" src="grootLogo.png" />
+                              <img _ngcontent-oob-c81="" alt="" class="slideImg" src="pic.png" />
                               <div _ngcontent-oob-c81="" class="description">
                                 <span style="color: #fff">TOKENOMICS</span>
                               </div>
@@ -8807,7 +8807,7 @@
                       <div _ngcontent-oob-c92="" class="spotifyWrapper">
                         <a _ngcontent-oob-c92="" target="_blank" class="spotifyElement" href="https://open.spotify.com/playlist/37i9dQZF1DWT3BGkpbwZZs">
                           <div _ngcontent-oob-c92="" class="imgHolder">
-                            <img _ngcontent-oob-c92="" alt="" style="width: 60px" src="grootLogo.png" />
+                            <img _ngcontent-oob-c92="" alt="" style="width: 60px" src="grootLogo2.png" />
                           </div>
                           <div _ngcontent-oob-c92="" class="right">
                             <div _ngcontent-oob-c92="" class="text"> Switch ETH for Groot 2.0. We have low taxes so you don’t need to worry about buying with a specific slippage, although you may need to use slippage during times of market volatility. <br />
@@ -8845,7 +8845,7 @@
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="assets/img/film/boss/menu-bg.jpg" />
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="assets/img/icons/close-gold.png" />
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="assets/img/icons/close-white.png" />
-        <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="grootLogo.png" />
+        <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="grootLogo2.png" />
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="assets/img/icons/left-arrow-square.png" />
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="assets/img/icons/right-arrow-square.png" />
         <img _ngcontent-oob-c134="" alt="" preload="" class="ng-tns-c134-0 ng-star-inserted" src="hex-play-button.png" />
@@ -9367,7 +9367,7 @@
             <div _ngcontent-oob-c121="" class="content">
               <div _ngcontent-oob-c121="" class="top">
                 <div _ngcontent-oob-c121="" class="left">
-                  <img _ngcontent-oob-c121="" src="assets/img/common/lionsgate-grootLogo.png" class="logo" />
+                  <img _ngcontent-oob-c121="" src="assets/img/common/lionsgate-grootLogo2.png" class="logo" />
                   <div _ngcontent-oob-c121="" class="copy">
                     <span _ngcontent-oob-c121="">®,™ &amp; © 2023 Lions Gate Ent. Inc. All Rights Reserved</span>
                   </div>
